{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "InGame",
            "id": "46f7079f-f2ac-4994-9bc4-166d0bbf88fb",
            "actions": [
                {
                    "name": "MovePlayer",
                    "type": "Button",
                    "id": "65044509-2fcc-4b50-8664-e4aae921dea2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveEnemy",
                    "type": "Button",
                    "id": "7b04a429-9d97-4945-b694-01711e0c2e26",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Letters",
                    "id": "d60eb013-4dde-4563-94e2-24b42e6ef8cc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c161209d-eb92-4ad8-959d-036f43c7a4ba",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a140e5b2-9554-45fa-9fb7-61a63896decd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "501a329c-d30d-42d2-be08-a07ff37cc891",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveEnemy",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "49744be6-694e-4f5f-a960-4c6a6a15cf2d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveEnemy",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "387d0a2d-fdb7-40bf-a5b4-490973862535",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveEnemy",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}